tests/compilation_error/optional_parameter_array_assignment_default.ll
int[] arr
arr[] = 1

def foo(int[] x=arr):
    print "arr isn't a literal!"
